n-vm-macros/tests/compile_fail/standalone_hypervisor.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::hypervisor(iommu)]
fn standalone_hypervisor() {}

fn main() {}